--- a/project/html/main.html
+++ b/project/html/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>시설물 추가 요청</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./../css/main.css">
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
@@ -68,6 +68,6 @@
     </div>
 
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="./../js/main.js"></script>
 </body>
 </html>
